fixed retrieving members, joining group, setting profile, and made creating and updating groups more robust and flexible
